--- a/style.css
+++ b/style.css
@@ -14,6 +14,10 @@ header {
   position: relative;
 }
 
+.header__right {
+  display: flex;
+}
+
 .products {
   padding-top: 50px;
   display: grid;
@@ -43,6 +47,7 @@ header {
 }
 
 .cart-block {
+  background: aliceblue;
   overflow-y: scroll;
   height: 300px;
   border: 1px solid #000;
@@ -59,4 +64,8 @@ header {
   align-items: center;
   border: 1px solid #000;
   margin-bottom: 5px;
+}
+.cart-item img {
+  width: 50px;
+  height: 50px;
 }/*# sourceMappingURL=style.css.map */
